[gd_scene load_steps=6 format=2]

[ext_resource path="res://games/draw_shoot/draw_shoot.gd" type="Script" id=1]
[ext_resource path="res://games/draw_shoot/action_buttons/action_buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/draw_shoot/player_panels/player_panels.tscn" type="PackedScene" id=3]
[ext_resource path="res://games/draw_shoot/action_manager.gd" type="Script" id=4]
[ext_resource path="res://games/draw_shoot/win_screen.gd" type="Script" id=5]

[node name="draw_shoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="action_manager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="player_panels" parent="." instance=ExtResource( 3 )]
rect_min_size = Vector2( 1004, 0 )
size_flags_horizontal = 3

[node name="action_buttons" parent="." instance=ExtResource( 2 )]
margin_top = 400.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 120 )

[node name="submit" type="Button" parent="action_buttons"]
anchor_right = 1.0
margin_top = 130.0
margin_right = 6.10352e-05
margin_bottom = 180.0
disabled = true
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win_screen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
rect_min_size = Vector2( 604, 380 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )

[node name="Label" type="Label" parent="win_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Asa wins loooosers"
align = 1
valign = 1
[connection signal="new_player_damage" from="action_manager" to="player_panels" method="_on_action_manager_new_player_damage"]
[connection signal="pressed" from="action_buttons/submit" to="." method="_on_submit_pressed"]
